--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   background-color: #182232;
   overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 * {
